Moved maximum age to configuration table, removed all hardcoded max age values in API and UI.
